--- a/tarn.html
+++ b/tarn.html
@@ -2,7 +2,7 @@
 <html>
 <head>
    <meta http-equiv="Content-Type" content="text/html; charset=utf-8" />
-   <title>Tung Quiz!!!</title>
+   <title>Tung Quiz Website!!!</title>
    <style>
         /* Provided CSS styling */
         html {
